<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/screen"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#88ffffff"
    android:layout_margin="20dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ebinjoy999.helloworld.LoginActivity">


    <ImageView
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="User name"/>

    <EditText
        android:gravity="center"
        android:textColor="@android:color/white"
        android:hint="Password"
        android:layout_margin="5dp"
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:textColor="@android:color/white"
        android:backgroundTint="@color/red"
        android:layout_margin="30dp"
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login" />
</LinearLayout>
</RelativeLayout>